--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 dist: trusty
 language: go
 before_install:
-  - go get github.com/spf13/hugo; go get github.com/kardianos/govendor; (cd $GOPATH/src/github.com/spf13/hugo; govendor sync; go install)
+  - go get github.com/gohugoio/hugo
   - sudo pip install pygments
   - hugo version
   - pygmentize -V
