--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseurl = "https://pages.github.ibm.com/nanjj/hugo-material-docs"
+baseurl = "https://pages.github.ibm.com/nanjj/"
 languageCode = "en-us"
-title = "hugo-material-docs"
+title = "Wall-E"
 theme = "hugo-material-docs"
 metadataformat = "yaml"
 canonifyurls = true
@@ -11,14 +11,15 @@ pygmentsuseclasses = false
 publishdir="."
 # Enable Google Analytics by entering your tracking id
 googleAnalytics = ""
-disableKinds = ["404", "RSS", "sitemap"]
+disableRSS = true
+disableSitemap = true
+disable404 = true
 
 [params]
 	# General information
 	description = "Wall-E"
 	copyright = "Released under the MIT license"
-    repo_url = "https://github.ibm.com/nanjj/hugo-material-docs"
-    repo_branch = "master"
+    repo_url = "https://github.ibm.com/nanjj/nanjj.github.ibm.com"
 	version = ""
 	logo = "images/logo.png"
 	favicon = "images/favicon.ico"
@@ -33,6 +34,31 @@ disableKinds = ["404", "RSS", "sitemap"]
     name = "Sitemap"
     url = "sitemap/"
     weight = 10
+
+[[menu.main]]
+	name   = "ELK Intro"
+	url    = "elk-intro/"
+	weight = 25
+
+[[menu.main]]
+	name   = "Bats Intro"
+	url    = "bats-intro/"
+	weight = 40
+
+[[menu.main]]
+	name   = "Playing Go"
+	url    = "playing-go/"
+	weight = 60
+
+[[menu.main]]
+	name   = "Hermit Crab"
+	url    = "hermit-crab/"
+	weight = 70
+
+[[menu.main]]
+	name   = "Slides"
+	url    = "tags/slides/"
+	weight = 100
 
 [blackfriday]
 	smartypants	= true
